[package]
name = "turbin3_solana_enrollment"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
bs58 = "0.5.1"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
